--- a/misc/Info.plist.in
+++ b/misc/Info.plist.in
@@ -29,7 +29,7 @@
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.utilities</string>
 	<key>LSMinimumSystemVersion</key>
-	<string>@CMAKE_OSX_DEPLOYMENT_TARGET@.0.0</string>
+	<string>@OSX_SDK_MINIMUM@</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<string>no</string>
 	<key>CFBundleLocalizations</key>
