Add tests for entropy and asn1time
Make a1time::get*() const, because functions return a pointer
still owned by a1time.
Switch from deprecated setTimeSpec() to setTimeZone(()

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -40,9 +40,6 @@ digest.cpp		pki_export.cpp
 func_base.cpp		func_base.h
 )
 
-list(APPEND test_biobytearray_sources BioByteArray.cpp BioByteArray.h)
-list(APPEND test_asn1int_sources asn1int.cpp asn1int.h func_base.h func_base.cpp)
-
 macro(ExpandSources target)
   list(TRANSFORM ${target}_sources PREPEND ${PROJECT_SOURCE_DIR}/lib/)
   list(APPEND ${target} ${PROJECT_BINARY_DIR}/local.h)
@@ -64,7 +61,14 @@ macro(Test name)
 endmacro()
 
 if(BUILD_TESTING)
+  list(APPEND test_biobytearray_sources BioByteArray.cpp BioByteArray.h)
+  list(APPEND test_asn1int_sources asn1int.cpp asn1int.h func_base.h func_base.cpp)
+  list(APPEND test_asn1time_sources asn1time.cpp asn1time.h func_base.h func_base.cpp)
+  list(APPEND test_entropy_sources entropy.cpp entropy.h func.h func_base.cpp xfile.h)
+
   add_custom_target(tests)
   Test(test_biobytearray)
   Test(test_asn1int)
+  Test(test_asn1time)
+  Test(test_entropy)
 endif()
