Extract debug_info class from main.cpp

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -36,8 +36,8 @@ db_x509super.h		pki_evp.h		xfile.h
 dhgen.cpp		dhgen.h			XcaProgress.cpp
 XcaProgress.h		XcaWarningCore.cpp	XcaWarningCore.h
 PwDialogCore.cpp	PwDialogCore.h		digest.h
-digest.cpp		pki_export.cpp
-func_base.cpp		func_base.h
+digest.cpp		pki_export.cpp		debug_info.h
+func_base.cpp		func_base.h		debug_info.cpp
 )
 
 macro(ExpandSources target)
