--- a/misc/xca.desktop
+++ b/misc/xca.desktop
@@ -11,7 +11,7 @@ Comment[nl]=Een grafische gebruikers interface voor behandeling en uitgifte van 
 Comment[sk]=GUI na spracovanie a vydávanie Certifikátov X.509
 Comment[pt_BR]=Interface gráfica para gerenciar e emitir Certificados X.509
 Exec=xca %F
-Icon=xca
+Icon=de.hohnstaedt.xca
 Terminal=false
 Categories=Application;Utility;Qt;
 MimeType=application/x-xca-database;application/x-xca-template;application/x-x509-ca-cert;application/pkcs10;application/x-pkcs7-certificates;application/x-pkcs12;
