Reproduce #493 - Renew Certificate freeze XCA
Add test case for certificate renewal with revocation.
This test case reproduces the crash.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 list(APPEND srcs PwDialogMock.h importPEM.cpp main.cpp main.h
-	newKey.cpp pem.cpp export.cpp)
+	newKey.cpp pem.cpp export.cpp renewal.cpp)
 
 list(TRANSFORM srcs PREPEND ${PROJECT_SOURCE_DIR}/test/)
 
