--- a/misc/xca.desktop
+++ b/misc/xca.desktop
@@ -7,6 +7,7 @@ Comment[de]=Eine graphische Oberfläche zur Erstellung von X.509 konformen Zerti
 Comment[fi]=Graafinen X.509-varmenteiden hallintatyökalu
 Comment[fr]=Création et gestion de certificats conformes à la norme X.509
 Comment[hr]=Grafičko korisničko sučelje za upravljanje životnim ciklusom X.509 sukladnih potvrda
+Comment[id]=Antar muka pengguna grafis untuk menangani dan menerbitkan Sertifikat yang patuh X.509
 Comment[nl]=Een grafische gebruikers interface voor behandeling en uitgifte van X.509 conforme certificaten
 Comment[sk]=GUI na spracovanie a vydávanie Certifikátov X.509
 Comment[pt_BR]=Interface gráfica para gerenciar e emitir Certificados X.509
