--- a/.github/workflows/cmake.yaml
+++ b/.github/workflows/cmake.yaml
@@ -24,7 +24,7 @@ jobs:
 
         - os: macos
           generator: Unix Makefiles
-          openssl_root: /usr/local/opt/openssl@1.1
+          openssl_root: /opt/homebrew/opt/openssl
           artifact: build/xca-*.dmg
           host: mac
           runs: macos-latest
@@ -45,14 +45,22 @@ jobs:
         exclude:
         - os: windows
           qt: "6.6.2"
-            #winarch: win64_mingw
-            #runs: windows-latest
+
+        - os: macos
+          qt: "5.15.2"
 
     runs-on: ${{matrix.runs}}
 
     steps:
+    - name: Install Python 3.10
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.10"
+
     - name: Install Sphinx
-      run: pip3 install sphinx
+      run: |
+        python -m pip install --upgrade pip
+        pip install sphinx
 
     - name: Install Qt
       uses: jurplel/install-qt-action@v3
@@ -80,7 +88,7 @@ jobs:
     - name: Configure
       # No YAML Multiline mechanism (>, |, \, >-, >+2 whatever) works as expected
       # Give up. Live with the long line
-      run: cmake -B ${{github.workspace}}/build -G "${{matrix.generator}}" -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DOPENSSL_ROOT_DIR=${{matrix.openssl_root}} --warn-uninitialized -DCMAKE_OSX_ARCHITECTURES=x86_64 -DCMAKE_OSX_DEPLOYMENT_TARGET="10.15"
+      run: cmake -B ${{github.workspace}}/build -G "${{matrix.generator}}" -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DOPENSSL_ROOT_DIR=${{matrix.openssl_root}} --warn-uninitialized -DCMAKE_OSX_ARCHITECTURES=arm64 -DCMAKE_OSX_DEPLOYMENT_TARGET="10.15"
 
     - name: Build
       run: cmake --build ${{github.workspace}}/build -j 5 -v
