--- a/misc/entitlement-appstore-compliant.plist
+++ b/misc/entitlement-appstore-compliant.plist
@@ -5,5 +5,7 @@
     <true/>
     <key>com.apple.security.files.user-selected.read-write</key>
     <true/>
+    <key>com.apple.application-identifier</key>
+    <string>HWR8GSJ73M.de.hohnstaedt.xca</string>
 </dict>
 </plist>
