Extend linux app images by 128 and 256 bit PNG
flatpak requires a 128x128 pixel sized icon

--- a/img/CMakeLists.txt
+++ b/img/CMakeLists.txt
@@ -51,5 +51,7 @@ if (UNIX AND NOT APPLE)
   Install_PNG(32x32)
   Install_PNG(48x48)
   Install_PNG(64x64)
+  Install_PNG(128x128)
+  Install_PNG(256x256)
 
 endif()
